revisions and nearby info

--- a/_data/itenerary.yaml
+++ b/_data/itenerary.yaml
@@ -1,26 +1,26 @@
 - time: "June 6th, 12 PM"
   title: "Setup and early arrival"
-  description: "Check-in at the lodge to sign the required waiver. No one is allowed in before this!"
+  description: "Check in at the lodge to sign the waiver. No entry before this!"
 
 - time: "3 PM"
   title: "Ceremony"
-  description: "Make your way to the altar meadow by this time! Assistance will be provided for the walk if needed."
+  description: "Make your way to the altar meadow by this time! Assistance available for the short walk on a forest path."
 
 - time: "4 PM"
   title: "Reception"
-  description: "Appetizers, drinks, & activities: Explore the venue (on foot or on bike), open mic style music, lawn games, guest book crafting, etc!"
+  description: "Appetizers, drinks, & activities."
 
 - time: "7 PM"
   title: "Dinner"
-  description: "Pizza, appetizers, salad, and cake. All options are vegetarian or vegan. Gluten-free pizza and cake-substitute available."
+  description: "Pizza, appetizers, salad, and cake. All options vegetarian. Gluten-free and/or vegan available."
 
 - time: "8 PM"
   title: "Party"
-  description: "Dancing and whatever! Just don't hurt yourself. There will be bonfire if fire restrictions allow."
+  description: "Dancing and whatever! Just don't hurt yourself."
 
 - time: "10 PM"
   title: "Gate closes"
-  description: "Don't worry; you can still come and go, and there are no quiet hours in the middle of nowhere. You'll just have to ask for the key after this time."
+  description: "You don't have to leave! You'll just have to ask for the key after this."
 
 - time: "June 7th, 8 AM"
   title: "Wake up (please)"
@@ -28,5 +28,5 @@
 
 - time: "10 AM"
   title: Mandatory check-out
-  description: "We have to be cleaned up and out of the way by 10 or else we get charged!"
+  description: "We have to clean and be out by 10 or we get charged!"
 
